Give filters the ability to apply user actions, refactoring